fixed svg overflow

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -12,6 +12,7 @@
 }
 
 html {
+  overflow-x: hidden;
   // Extra small devices (portrait phones, less than 576px)
   @media (max-width: 575.98px) {
     font-size: 55%;
